{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 280,
  "lineage": "0bfed178-c843-63e4-1dfa-9922c6bc2993",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c8b004f03fba647f",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-116-17-118.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.17.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbcf00b8663c7cd6",
            "arn": "arn:aws:ec2:us-east-2:138683655500:instance/i-06b0590718bfda99d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b0590718bfda99d",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "equal-lemur-20210418092024703400000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05179fc21a8583161",
            "private_dns": "ip-172-31-8-35.us-east-2.compute.internal",
            "private_ip": "172.31.8.35",
            "public_dns": "ec2-13-58-152-188.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.152.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d585a9a80077f3cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "equal-lemur-egress",
              "equal-lemur-ingress-internal",
              "equal-lemur-ingress-k8s",
              "equal-lemur-ingress-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dbae06b0",
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur",
              "terraform-kubeadm:node": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0105bc663d04ce30f",
              "sg-04a57c2ad6b36d99b",
              "sg-05a2d3e44fa428fa9",
              "sg-09389a1bac4c8b51e"
            ]
          },
          "dependencies": [
            "aws_eip.master",
            "aws_key_pair.main",
            "aws_security_group.egress",
            "aws_security_group.ingress_internal",
            "aws_security_group.ingress_k8s",
            "aws_security_group.ingress_ssh",
            "data.aws_ami.ubuntu",
            "random_pet.cluster_name",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbcf00b8663c7cd6",
            "arn": "arn:aws:ec2:us-east-2:138683655500:instance/i-05984b44223c2f4bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05984b44223c2f4bc",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "equal-lemur-20210418092024703400000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ade70d41ac69ee9c",
            "private_dns": "ip-172-31-33-77.us-east-2.compute.internal",
            "private_ip": "172.31.33.77",
            "public_dns": "ec2-18-217-196-233.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.196.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e87485bebf95a46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "equal-lemur-egress",
              "equal-lemur-ingress-internal",
              "equal-lemur-ingress-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a6e7a9ea",
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur",
              "terraform-kubeadm:node": "worker-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0105bc663d04ce30f",
              "sg-04a57c2ad6b36d99b",
              "sg-05a2d3e44fa428fa9"
            ]
          },
          "dependencies": [
            "aws_eip.master",
            "aws_instance.master",
            "aws_key_pair.main",
            "aws_security_group.egress",
            "aws_security_group.ingress_internal",
            "aws_security_group.ingress_k8s",
            "aws_security_group.ingress_ssh",
            "data.aws_ami.ubuntu",
            "random_pet.cluster_name",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbcf00b8663c7cd6",
            "arn": "arn:aws:ec2:us-east-2:138683655500:instance/i-0a439251d3ae57b83",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a439251d3ae57b83",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "equal-lemur-20210418092024703400000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01557b0930fa561de",
            "private_dns": "ip-172-31-11-96.us-east-2.compute.internal",
            "private_ip": "172.31.11.96",
            "public_dns": "ec2-3-143-254-29.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.254.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e090f30d9e49aae8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "equal-lemur-egress",
              "equal-lemur-ingress-internal",
              "equal-lemur-ingress-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-dbae06b0",
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur",
              "terraform-kubeadm:node": "worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0105bc663d04ce30f",
              "sg-04a57c2ad6b36d99b",
              "sg-05a2d3e44fa428fa9"
            ]
          },
          "dependencies": [
            "aws_eip.master",
            "aws_instance.master",
            "aws_key_pair.main",
            "aws_security_group.egress",
            "aws_security_group.ingress_internal",
            "aws_security_group.ingress_k8s",
            "aws_security_group.ingress_ssh",
            "data.aws_ami.ubuntu",
            "random_pet.cluster_name",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:138683655500:security-group/sg-0105bc663d04ce30f",
            "description": "Allow all outgoing traffic to everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105bc663d04ce30f",
            "ingress": [],
            "name": "equal-lemur-egress",
            "name_prefix": "",
            "owner_id": "138683655500",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur"
            },
            "timeouts": null,
            "vpc_id": "vpc-13d55578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:138683655500:security-group/sg-04a57c2ad6b36d99b",
            "description": "Allow all incoming traffic from nodes and Pods in the cluster",
            "egress": [],
            "id": "sg-04a57c2ad6b36d99b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from cluster nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from the Pods of the cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "equal-lemur-ingress-internal",
            "name_prefix": "",
            "owner_id": "138683655500",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur"
            },
            "timeouts": null,
            "vpc_id": "vpc-13d55578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:138683655500:security-group/sg-09389a1bac4c8b51e",
            "description": "Allow incoming Kubernetes API requests (TCP/6443) from outside the cluster",
            "egress": [],
            "id": "sg-09389a1bac4c8b51e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "equal-lemur-ingress-k8s",
            "name_prefix": "",
            "owner_id": "138683655500",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur"
            },
            "timeouts": null,
            "vpc_id": "vpc-13d55578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.cluster_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:138683655500:security-group/sg-05a2d3e44fa428fa9",
            "description": "Allow incoming SSH traffic (TCP/22) from outside the cluster",
            "egress": [],
            "id": "sg-05a2d3e44fa428fa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "equal-lemur-ingress-ssh",
            "name_prefix": "",
            "owner_id": "138683655500",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-kubeadm:cluster": "equal-lemur"
            },
            "timeouts": null,
            "vpc_id": "vpc-13d55578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_pet.cluster_name"
          ]
        }
      ]
    }
  ]
}